fixed some changes directory folder

--- a/index.html
+++ b/index.html
@@ -11,49 +11,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Shop</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
-                  </li>
-                  <li class="">
-                    <a href=""></li>a>
-                  </li>
-                  <li>
-                    <a href=""></li>a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
+
     </header>
 
     <footer>
-        <div id="foot-div">
-            <div>
-                <a href="#">
-                    <img src="./images/LOGO-MS-ORIGINALY.png" alt="">
-                </a>
-            </div>
-            <nav></nav>
-            <div></div>
-        </div>
+
     </footer>
 
 
-    <script src="./JS/bootstrap.min.js"></script>
+    <script src="./scripts/bootstrap.min.js"></script>
 </body>
 </html>
