--- a/index.html
+++ b/index.html
@@ -7,24 +7,71 @@
     <link rel="stylesheet" href="./styles/ms.css" type="text/css">
     <link rel="stylesheet" href="./styles/mobile.css" type="text/css">
     <link rel="stylesheet" href="./styles/desktop.css" type="text/css">
-    <!-- <link rel="stylesheet" href="./styles/bootstrap.min.css" type="text/css"> -->
+    <link rel="stylesheet" href="./styles/bootstrap.min.css" type="text/css">
+    <!---->
+    <link rel="stylesheet" href="./styles/announcement-bar.css" type="text/css">
+    <link rel="stylesheet" href="./styles/header.css" type="text/css">
+    <link rel="stylesheet" href="./styles/banner.css" type="text/css">
+    <link rel="stylesheet" href="./styles/footer.css" type="text/css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
-    <title>Inicio | Misiones Sabor</title>
+    <title>Misiones Sabor | Sabores naturales que te acompañan</title>
 </head>
 <body>
     <header>
+        <div id="ms-announcement-bar">
+          <p class="ms-anbar-message">
+            Pedidos realizados antes de las 12 hs. serán enviados el mismo día
+            | Envío gratis a toda ARG a partir de 50 unidades.
+          </p>
+        </div>
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid cont-navbar">
+            <a class="navbar-brand" href="https://misionessabor.com">
+              <img src="//cdn.shopify.com/s/files/1/0664/9744/6170/files/LOGO-MS-ORIGINALY-BIG-01.png?v=1665850543" alt="Misiones Sabor" class="header-logo">
+            </a>
 
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Productos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Venta al por mayor</a>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+        </nav>
     </header>
+
+    <main>
+      <section class="ms-main-banner-sect">
+        <div class="ms-main-banner">
+
+        </div>
+      </section>
+    </main>
 
     <footer>
         <div class="gp-footer">
             <div class="column logo">
               <a href="https://misionessabor.com">
-                <!-- <img src="//cdn.shopify.com/s/files/1/0664/9744/6170/files/LOGO-MS-ORIGINALY-BIG-01.png?v=1665850543" alt="Misiones Sabor" class="footer-logo"> -->
+                <img src="//cdn.shopify.com/s/files/1/0664/9744/6170/files/LOGO-MS-ORIGINALY-BIG-01.png?v=1665850543" alt="Misiones Sabor" class="footer-logo">
               </a>
               <div class="social-wrapper">
                 <a href="https://www.instagram.com/misiones_sabor" aria-describedby="a11y-external-message">
@@ -177,7 +224,7 @@
           </div>
           <div class="gp-footer-cr">
             <div class="cr-1">
-              &copy; MISIONES SABOR 2022.
+              &copy; MISIONES SABOR 2023.
             </div>
             <div class="cr-2">
               <!--MERCADO PAGO-->
