MS Website (Contact, Policies)
Co-authored-by: Roger Duncke <RogerDuncke@users.noreply.github.com>
Co-authored-by: Kevin Duncke <kevinduncke@gmail.com>

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,29 +8,43 @@
     <link rel="stylesheet" href="../styles/ms.css">
     <link rel="stylesheet" href="../styles/mobile.css">
     <link rel="stylesheet" href="../styles/desktop.css">
-    <!-- <link rel="stylesheet" href="../styles/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="../styles/bootstrap.min.css">
+
+    <link rel="stylesheet" href="../styles/announcement-bar.css" type="text/css">
+    <link rel="stylesheet" href="../styles/header.css" type="text/css">
+    <link rel="stylesheet" href="../styles/footer.css" type="text/css">
+    <link rel="stylesheet" href="../styles/contact.css" type="text/css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
     <title>Contact Us</title>
 </head>
+
 <body>
     <header>
-
+        
     </header>
     <main>
         <div id="ms-contact-div">
             <h1 id="ms-contact-fh1">Contáctenos</h1>
             <h2 id="ms-contact-fh2">Nos encantaría saber de usted</h2>
             <p class="ms-contact-fp">Si desea hablar con alguien del equipo, no dude en ponerse en contacto.</p>
-            <p class="ms-contact-fp">Ya sea para obtener ayuda para saber más de nuestros productos naturales, analizar los detalles de un pedido existente, o para solicitar una asociación mayorista, estaremos encantados de ayudarlo.</p>
-            <p class="ms-contact-fp">Escribanos por WhatsApp al: <a href="https://wa.me/5493765095625">+54 9 3765-095625</a>, envíenos un correo electrónico a <a href="mailto:ventas@misionessabor.com">ventas@misionessabor.com</a> o complete el formulario y nos pondremos en contacto con usted tan pronto como podamos.</p>
+            <p class="ms-contact-fp">Ya sea para obtener ayuda para saber más de nuestros productos naturales, analizar
+                los detalles de un pedido existente, o para solicitar una asociación mayorista, estaremos encantados de
+                ayudarlo.</p>
+            <p class="ms-contact-fp">Escribanos por WhatsApp al: <a href="https://wa.me/5493765095625">+54 9
+                    3765-095625</a>, envíenos un correo electrónico a <a
+                    href="mailto:ventas@misionessabor.com">ventas@misionessabor.com</a> o complete el formulario y nos
+                pondremos en contacto con usted tan pronto como podamos.</p>
         </div>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
