--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Nosotros</a>
+              <a class="nav-link" href="./pages/about.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Venta al por mayor</a>
+              <a class="nav-link" href="./pages/wholesale.html">Venta al por mayor</a>
             </li>
           </ul>
         </div>
