some fixed things on name logo & file type

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <main>
         <div class="ms-maintenance-div">
             <div>
-                <img height="150" width="300" src="./images/logo/LOGO-MS-ORIGINALY.png" alt="Misiones Sabor">
+                <img height="150" width="300" src="./images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor">
                 <h1>El sitio está actualmente <br> fuera de servicio por mantenimiento.</h1>
                 <h2>Nos disculpamos por cualquier inconveniente causado. <br> Casi hemos terminado.</h2>
                 <div>
