--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!---->
-    <link rel="stylesheet" href="./styles/ms.css">
-    <link rel="stylesheet" href="./styles/maintenance.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/ms.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/maintenance.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -72,7 +72,7 @@
     <main>
         <div class="ms-maintenance-div">
             <div>
-                <img height="150" width="300" src="./images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor">
+                <img height="150" width="300" src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor">
                 <h1>El sitio está actualmente <br> fuera de servicio por mantenimiento.</h1>
                 <h2>Nos disculpamos por cualquier inconveniente causado. <br> Casi hemos terminado.</h2>
                 <div>
