New changes on MS Website
Co-authored-by: Roger Duncke <RogerDuncke@users.noreply.github.com>
Co-authored-by: Kevin Duncke <kevinduncke@gmail.com>

--- a/main.html
+++ b/main.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -86,7 +85,6 @@
   <!--==========================================================================-->
   <!--==========================================================================-->
 </head>
-
 <body>
   <header>
     <div id="ms-announcement-bar">
@@ -98,14 +96,12 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid cont-navbar">
         <a class="navbar-brand" href="https://misionessabor.com">
-          <img src="./images/logo/LOGO-MS-ORIGINALY.png" alt="Misiones Sabor" class="header-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo">
         </a>
-
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -133,7 +129,8 @@
     <section class="ms-main-banner-sect">
       <div class="ms-main-banner">
         <div class="ms-main-banner-divt">
-          <h1>Descubre hierbas que <br /> revitalizan tu salud.</h1>
+          <h2></h2>
+          <h1>Descubre hierbas que <br/> revitalizan tu salud.</h1>
         </div>
       </div>
     </section>
@@ -145,17 +142,19 @@
             <!-- Controls -->
             <div class="glide__arrows" data-glide-el="controls">
               <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-                <svg xmlns="http://www.w3.org/2000/svg" 
-                viewBox="0 0 448 512" height="25" width="25" fill="black">
-                  <path
-                    d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
+                <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="black" 
+                  viewBox="0 0 384 512">
+                  <path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 
+                  0s12.5-32.8 0-45.3L109.3 256 278.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 
+                  0l-192 192z"/>
                 </svg>
               </button>
               <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 448 512" height="25" width="25" fill="black">
-                  <path
-                    d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z" />
+                <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="black" 
+                    viewBox="0 0 384 512">
+                    <path d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 
+                    0s-12.5-32.8 0-45.3L274.7 256 105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 
+                    0l192 192z"/>
                 </svg>
               </button>
             </div>  
@@ -224,7 +223,7 @@
     <div class="gp-footer">
       <div class="column logo">
         <a href="https://misionessabor.com">
-          <img src="./images/logo/LOGO-MS-ORIGINALY.png" alt="Misiones Sabor" class="footer-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo">
         </a>
         <div class="social-wrapper">
           <a href="https://www.instagram.com/misiones_sabor" aria-describedby="a11y-external-message">
@@ -392,7 +391,6 @@
         &copy; MISIONES SABOR 2023.
       </div>
       <div class="cr-2">
-
         <!--VISA-->
         <svg xmlns="http://www.w3.org/2000/svg" width="58" height="42" viewBox="0 0 28 18">
           <path fill="#F1F5F7" d="M-464-532.975H643V1253H-464z" />
@@ -404,7 +402,6 @@
             d="m23 11.953-.363.013-.786.002c-.074 0-.073-.027-.087-.097l-.124-.69c-.017-.088-.047-.113-.135-.113-.58.004-1.16.005-1.74 0-.1-.002-.136.036-.165.123-.077.23-.16.458-.248.684l-.1.09c-.5.004-1.002.002-1.504 0l-.033-.013.14-.347 2.14-5.107c.154-.366.358-.488.754-.488h1.122c.09 0 .128.007.148.103.335 1.62.674 3.24 1.012 4.86l.065.9-.097.06v.023zm-2.085-4.23-.027.037c-.265.73-.53 1.24-.797 2.24h1.283c-.154-1-.306-1.547-.458-2.277zM4 6h.236l2.493.004c.387 0 .676.203.75.585.21 1.09.42 2.182.626 3.273l.04.172.057-.108c.505-1.277 1.01-2.642 1.512-3.92.032-.08.07 0 .156 0h1.5l-.045.115-2.29 5.474c-.052.124-.082.29-.178.353-.09.06-.254.017-.385.018l-1.1.003c-.1.003-.136-.03-.16-.123-.395-1.546-.8-3.09-1.19-4.636-.073-.285-.28-.48-.552-.6A5.828 5.828 0 0 0 4 6.167V6zm9.375 5.746.28-1.308.17.078c.493.23 1.012.34 1.555.286.177-.018.362-.073.52-.157.332-.18.366-.548.073-.786-.168-.137-.37-.233-.555-.348-.277-.17-.574-.318-.827-.518-.902-.713-.61-1.8-.098-2.33.405-.42.654-.655 1.223-.655.9 0 1.802-.047 2.274.112l.072.032-.27 1.255c-.354-.155-.712-.266-1.09-.272a3.028 3.028 0 0 0-.65.062.724.724 0 0 0-.313.182c-.17.153-.173.372-.01.528.11.106.24.195.374.274l.842.476c.396.247.722.565.8 1.05.115.7-.097 1.292-.646 1.75-.395.327-.585.44-1.085.51-1.013-.002-1.802 0-2.484-.163l-.155-.06zM13.587 6c-.172 1-.34 1.588-.507 2.373-.245 1.147-.492 2.295-.732 3.443-.025.12-.068.174-.192.17-.414-.008-.83.014-1.243.014h-.143c.062 0 .12-.588.18-.867.355-1.66.71-3.33 1.063-4.99.023-.11.06-.142.176-.14.413.01.828-.003 1.242-.003h.155z"
             fill="#142688" />
         </svg>
-
         <!--MASTERCAD-->
         <svg xmlns="http://www.w3.org/2000/svg" width="58" height="42" viewBox="0 0 100 60">
           <g fill="none" fill-rule="evenodd">
@@ -418,7 +415,6 @@
             </g>
           </g>
         </svg>
-
         <!--PAYPAL-->
         <svg xmlns="http://www.w3.org/2000/svg" width="58" height="42" viewBox="0 0 100 60">
           <g fill="none" fill-rule="evenodd">
@@ -439,7 +435,6 @@
             </g>
           </g>
         </svg>
-
         <!--BOLETO-->
         <svg xmlns="http://www.w3.org/2000/svg" width="58" height="42" viewBox="0 0 100 60">
           <g fill="none" fill-rule="evenodd">
@@ -448,7 +443,6 @@
               d="M24.906 12.657h1.652V27.53h-1.652V12.657zm-4.318 0h1.652V27.53h-1.652V12.657zm17.124 0h4.486V27.53h-4.486V12.657zm22.927 0h2.242V27.53H60.64V12.657zm5.485 0h2.242V27.53h-2.242V12.657zm8.977 0h2.882V27.53H75.1V12.657zm-3.245 0h.932V27.53h-.932V12.657zm-15.078 0h.932V27.53h-.932V12.657zm-1.994 0h.932V27.53h-.932V12.657zm-6.48 0h.932V27.53h-.933V12.657zm-14.892 0h.932V27.53h-.932V12.657zm-2.745 0h1.73V27.53h-1.73V12.657zm-10.08 33.897V31.257h5.738c1.168 0 2.103.154 2.81.463.706.31 1.256.786 1.655 1.431.401.64.602 1.313.602 2.02 0 .65-.177 1.267-.531 1.843a3.786 3.786 0 0 1-1.603 1.4c.925.272 1.638.735 2.131 1.389.498.652.748 1.424.748 2.314 0 .72-.153 1.386-.455 2a3.882 3.882 0 0 1-1.121 1.424c-.446.33-1.003.583-1.673.756-.81.185-1.639.272-2.469.257h-5.834.003zm2.03-8.867h3.307c.896 0 1.54-.061 1.928-.177a2.131 2.131 0 0 0 1.163-.765c.272-.392.41-.862.392-1.339a2.433 2.433 0 0 0-.366-1.341 1.842 1.842 0 0 0-1.043-.798c-.453-.142-1.227-.213-2.325-.213h-3.056v4.636-.003zm0 7.072h3.81c.653 0 1.113-.026 1.38-.075.462-.083.854-.222 1.168-.416.328-.212.594-.507.772-.855.203-.373.302-.805.302-1.291 0-.574-.146-1.068-.441-1.493a2.308 2.308 0 0 0-1.218-.89c-.517-.17-1.263-.257-2.235-.257h-3.538v5.277zm11.359-3.75c0-2.047.569-3.563 1.71-4.55.952-.819 2.115-1.228 3.484-1.228 1.52 0 2.766.499 3.734 1.495.965.994 1.449 2.37 1.449 4.128 0 1.424-.213 2.543-.64 3.358a4.533 4.533 0 0 1-1.869 1.9 5.407 5.407 0 0 1-2.671.676c-1.55 0-2.804-.496-3.762-1.488-.958-.994-1.435-2.425-1.435-4.29zm1.921.005c0 1.417.31 2.48.93 3.181.623.706 1.402 1.058 2.346 1.058.932 0 1.708-.352 2.331-1.06.619-.709.93-1.788.93-3.238 0-1.367-.314-2.404-.937-3.105a2.975 2.975 0 0 0-2.324-1.058c-.944 0-1.723.35-2.346 1.051-.619.701-.93 1.76-.93 3.174v-.003zm10.615 5.54V31.257h1.879v15.297h-1.879zm12.345-3.59 1.943.258c-.302 1.129-.869 2.007-1.695 2.63-.826.624-1.878.938-3.165.938-1.616 0-2.895-.498-3.844-1.495-.946-.994-1.42-2.392-1.42-4.191 0-1.858.476-3.303 1.434-4.33.958-1.03 2.2-1.543 3.727-1.543 1.477 0 2.683.503 3.62 1.51.937 1.008 1.406 2.424 1.406 4.25l-.009.498h-8.253c.07 1.214.413 2.146 1.031 2.791a3.067 3.067 0 0 0 2.31.968c.688 0 1.275-.182 1.759-.545.489-.364.87-.945 1.156-1.74v.002zm-6.15-3.012h6.172c-.083-.933-.321-1.632-.708-2.097a2.87 2.87 0 0 0-2.32-1.086c-.862 0-1.584.288-2.171.864-.583.576-.909 1.35-.973 2.319zm14.547 4.925.258 1.66a6.96 6.96 0 0 1-1.414.168c-.68 0-1.206-.106-1.584-.323-.373-.218-.637-.499-.79-.85-.154-.352-.23-1.094-.23-2.222v-6.388h-1.387V35.47h1.388v-2.742l1.878-1.128v3.87h1.879v1.452h-1.879v6.496c0 .539.033.883.1 1.037a.765.765 0 0 0 .32.366c.198.1.419.147.64.134l.819-.075.002-.003zm1.15-3.867c0-2.048.568-3.564 1.71-4.55.952-.82 2.115-1.229 3.484-1.229 1.52 0 2.766.499 3.733 1.495.966.994 1.45 2.37 1.45 4.128 0 1.424-.213 2.543-.64 3.358a4.533 4.533 0 0 1-1.87 1.9 5.407 5.407 0 0 1-2.67.676c-1.551 0-2.804-.496-3.763-1.488-.958-.994-1.434-2.425-1.434-4.29zm1.92.004c0 1.417.31 2.48.93 3.181.624.706 1.402 1.058 2.346 1.058.933 0 1.709-.352 2.332-1.06.618-.709.93-1.788.93-3.238 0-1.367-.314-2.404-.937-3.105a2.975 2.975 0 0 0-2.325-1.058c-.944 0-1.722.35-2.346 1.051-.618.701-.93 1.76-.93 3.174v-.003z" />
           </g>
         </svg>
-
         <!--AMERICAN EXPRESS-->
         <svg xmlns="http://www.w3.org/2000/svg" width="58" height="42" viewBox="0 0 50 30">
           <g fill="none" fill-rule="evenodd">
@@ -459,7 +453,6 @@
               d="m11.316 12.856 1.055 2.559h-2.103l1.048-2.559Zm21.92.107h-4.06v1.127h3.995v1.69h-3.986v1.257h4.06v1.008l2.832-3.061-2.833-3.191-.008 1.17ZM14.06 9.772h5.448l1.21 2.638 1.12-2.646h14.141l1.47 1.622 1.52-1.622h6.496l-4.799 5.252 4.75 5.22h-6.592l-1.47-1.622-1.534 1.622H12.76l-.673-1.622h-1.54l-.676 1.622H4.537L9.018 9.764h4.677l.364.008Zm11.813 1.47H22.82l-2.045 4.822-2.216-4.822h-3.03V17.8l-2.81-6.56h-2.717l-3.248 7.517h2.12l.674-1.623h3.54l.674 1.623h3.709v-5.366l2.387 5.374h1.623l2.373-5.357v5.359h1.988l.033-7.528-.002.002Zm12.737 3.774 3.451-3.774h-2.484l-2.184 2.353-2.11-2.353h-8.038v7.524h7.923l2.201-2.37 2.11 2.37h2.558l-3.426-3.75h-.001Z" />
           </g>
         </svg>
-
         <!--NARANJA-->
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="32"
           viewBox="0 -0.06728534319998491 48.12915494181855 48.067285343199984">
@@ -492,7 +485,6 @@
               fill="#ff5000" />
           </g>
         </svg>
-
         <!--MERCADO PAGO-->
         <svg version="1.1" id="svg2477" xmlns="http://www.w3.org/2000/svg" x="0" y="0" height="64" width="96"
           viewBox="0 0 1000 260.6" style="enable-background:new 0 0 1000 260.6" xml:space="preserve">
