MS Update 5 (Main, Header, Footer, & More)
Co-authored-by: Kevin Duncke <kevinduncke@gmail.com>

--- a/main.html
+++ b/main.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="./styles/ms.css" type="text/css">
+  <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="https://misionessabor.com/styles/ms.css" type="text/css">
   <!---->
-  <link rel="stylesheet" href="./styles/announcement-bar.css" type="text/css">
-  <link rel="stylesheet" href="./styles/header.css" type="text/css">
-  <link rel="stylesheet" href="./styles/banner.css" type="text/css">
-  <link rel="stylesheet" href="./styles/products.css" type="text/css">
-  <link rel="stylesheet" href="./styles/footer.css" type="text/css">
+  <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
+  <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
+  <link rel="stylesheet" href="https://misionessabor.com/styles/banner.css" type="text/css">
+  <link rel="stylesheet" href="https://misionessabor.com/styles/products.css" type="text/css">
+  <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
-  <link rel="stylesheet" href="./res/node_modules/@glidejs/glide/dist/css/glide.core.min.css">
+  <link rel="stylesheet" href="https://misionessabor.com/res/node_modules/@glidejs/glide/dist/css/glide.core.min.css">
   <!--============================-->
   <!--===       <TITLE>        ===-->
   <title>Misiones Sabor | Sabores naturales que te acompañan</title>
@@ -51,37 +51,37 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://misionessabor.com">
   <meta property="og:site" content="Misiones Sabor">
-  <meta property="og:image" itemprop="image" content="./images/logo/SLOGO-SHARE-375x379px.webp">
+  <meta property="og:image" itemprop="image" content="https://misionessabor.com/images/logo/SLOGO-SHARE-375x379px.webp">
   <meta itemprop="name" content="Misiones Sabor">
-  <meta itemprop="image" content="./images/logo/SLOGO-SHARE-375x379px.webp">
+  <meta itemprop="image" content="https://misionessabor.com/images/logo/SLOGO-SHARE-375x379px.webp">
   <!--============================-->
   <link rel="canonical" href="https://misionessabor.com">
   <!--============================-->
   <!--============================-->
   <!--===    <FAVICON ICON>    ===-->
-  <link rel="icon" href="./images/icons/favicons/favicon.ico">
-  <link rel="icon" type="image/png" href="./images/icons/favicons/android-chrome-192x192.png" sizes="192x192">
-  <link rel="icon" type="image/png" href="./images/icons/favicons/favicon-16x16.png" sizes="16x16">
-  <link rel="icon" type="image/png" href="./images/icons/favicons/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="./images/icons/favicons/favicon-96x96.png" sizes="96x96">
-  <link rel="manifest" href="./images/icons/favicons/manifest.json">
-  <link rel="mask-icon" href="./images/icons/favicons/safari-pinned-tab.svg" color="#e4ffe4">
+  <link rel="icon" href="https://misionessabor.com/images/icons/favicons/favicon.ico">
+  <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="manifest" href="https://misionessabor.com/images/icons/favicons/manifest.json">
+  <link rel="mask-icon" href="https://misionessabor.com/images/icons/favicons/safari-pinned-tab.svg" color="#e4ffe4">
   <!--============================-->
-  <link rel="apple-touch-icon" sizes="57x57" href="./images/icons/favicons/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./images/icons/favicons/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./images/icons/favicons/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./images/icons/favicons/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./images/icons/favicons/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./images/icons/favicons/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./images/icons/favicons/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./images/icons/favicons/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/favicons/apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-180x180.png">
   <!--===================================-->
   <!--===    <MS APPLICATION ICON>    ===-->
   <meta name="msapplication-TileColor" content="#e4ffe4">
   <meta name="msapplication-name" content="Misiones Sabor">
-  <meta name="msapplication-TileImage" content="./images/icons/favicons/mstile-144x144.png">
-  <meta name="msapplication-config" content="./images/icons/favicons/browserconfig.xml">
+  <meta name="msapplication-TileImage" content="https://misionessabor.com/images/icons/favicons/mstile-144x144.png">
+  <meta name="msapplication-config" content="https://misionessabor.com/images/icons/favicons/browserconfig.xml">
   <!--==========================================================================-->
   <!--==========================================================================-->
 </head>
@@ -105,23 +105,67 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="https://misionessabor.com/index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./collections/all.html">Productos</a>
+              <a class="nav-link" href="https://misionessabor.com/collections/all.html">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/about.html">Nosotros</a>
+              <a class="nav-link" href="https://misionessabor.com/pages/about.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/wholesale.html">Venta al por mayor</a>
+              <a class="nav-link" href="https://misionessabor.com/pages/wholesale.html">Venta al por mayor</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/contact.html">Contacto</a>
+              <a class="nav-link" href="https://misionessabor.com/pages/contact.html">Contacto</a>
             </li>
           </ul>
+          <div class="customer-service">
+            <div class="customer-service__wrapper">
+              <p class="customer-service-title">SERVICIO DE ATENCIÓN AL CLIENTE</p>
+              <a href="mailto:ventas@misionessabor.com" aria-describedby="a11y-external-message">ventas@misionessabor.com</a>
+              <a href="https://wa.me/5493765095625" aria-describedby="a11y-external-message">+54 9 3765-095625</a>
+            </div>
+          </div>
+          <div class="social-contact">
+            <div>
+              <a href="https://wa.me/5493765095625" aria-describedby="a11y-external-message">
+                <svg aria-hidden="true" focusable="false" role="presentation" height="25" width="25" viewBox="0 0 448 512">
+                  <path fill="#000000" d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 
+                    224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 
+                    82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 
+                    184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 
+                    1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 
+                    0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 
+                    4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/>
+                </svg>
+              </a>
+            </div>
+            <div>
+              <a href="https://www.instagram.com/misiones_sabor" aria-describedby="a11y-external-message">
+                <svg aria-hidden="true" focusable="false" role="presentation" height="25" width="25" viewBox="0 0 448 512">
+                  <path fill="#000000" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 
+                    141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 
+                    74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 
+                    12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 
+                    1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 
+                    2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 
+                    34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 
+                    9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/>
+                </svg>
+              </a>
+            </div>
+            <div>
+              <a href="https://www.facebook.com/misionesabor/" aria-describedby="a11y-external-message">
+                <svg xmlns="http://www.w3.org/2000/svg" height="25" width="25" fill="#000000" viewBox="0 0 320 512">
+                  <path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 
+                  0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/>
+                </svg>
+              </a>
+            </div>
+          </div>
         </div>
-      </div>
+      </div>         
     </nav>
   </header>
 
@@ -160,7 +204,7 @@
             </div>  
           </div>
           <div class="ms-main-prd-dvm">
-            <a class="ms-main-prd-avm" href="./collections/all.html">Ver Más</a>
+            <a class="ms-main-prd-avm" href="https://misionessabor.com/collections/all.html">Ver Más</a>
           </div>
         </div>
         <div class="glide__track" data-glide-el="track">
@@ -258,18 +302,18 @@
       <div class="column dropdown closed drop-nav">
         <h3>Navegación</h3>
         <ul>
-          <li><a href="./collections/all.html">Hierbas</a></li>
-          <li><a href="./pages/wholesale.html">Venta al por Mayor</a></li>
+          <li><a href="https://misionessabor.com/collections/all.html">Hierbas</a></li>
+          <li><a href="https://misionessabor.com/pages/wholesale.html">Venta al por Mayor</a></li>
         </ul>
       </div>
       <div class="column dropdown closed drop-nav">
         <h3>Acerca de Nosotros</h3>
         <ul>
           <li>
-            <a href="./pages/about.html">Nosotros</a>
+            <a href="https://misionessabor.com/pages/about.html">Nosotros</a>
           </li>
           <li>
-            <a href="./pages/contact.html">Información de contacto</a>
+            <a href="https://misionessabor.com/pages/contact.html">Información de contacto</a>
           </li>
         </ul>
       </div>
@@ -277,16 +321,16 @@
         <h3>Información</h3>
         <ul>
           <li>
-            <a href="./policies/terms-of-service.html">Términos de Servicio</a>
+            <a href="https://misionessabor.com/policies/terms-of-service.html">Términos de Servicio</a>
           </li>
           <li>
-            <a href="./policies/privacy-policy.html">Política de privacidad</a>
+            <a href="https://misionessabor.com/policies/privacy-policy.html">Política de privacidad</a>
           </li>
           <li>
-            <a href="./policies/shipping-policy.html">Política de envío</a>
+            <a href="https://misionessabor.com/policies/shipping-policy.html">Política de envío</a>
           </li>
           <li>
-            <a href="./policies/refund-policy.html">Política de reembolso</a>
+            <a href="https://misionessabor.com/policies/refund-policy.html">Política de reembolso</a>
           </li>
         </ul>
       </div>
@@ -308,10 +352,10 @@
             <div class="accordion__content rte" id="accordion-collapser-1">
               <ul class="accordion-ul">
                 <li class="accordion-li">
-                  <a href="./collections/all.html">Hierbas</a>
+                  <a href="https://misionessabor.com/collections/all.html">Hierbas</a>
                 </li>
                 <li class="accordion-li">
-                  <a href="./pages/wholesale.html">Venta al por Mayor</a>
+                  <a href="https://misionessabor.com/pages/wholesale.html">Venta al por Mayor</a>
                 </li>
               </ul>
             </div>
@@ -333,10 +377,10 @@
             <div class="accordion__content rte" id="accordion-collapser-2">
               <ul class="accordion-ul">
                 <li class="accordion-li">
-                  <a href="./pages/about.html">Nosotros</a>
+                  <a href="https://misionessabor.com/pages/about.html">Nosotros</a>
                 </li>
                 <li class="accordion-li">
-                  <a href="./pages/contact.html">Información de Contacto</a>
+                  <a href="https://misionessabor.com/pages/contact.html">Información de Contacto</a>
                 </li>
               </ul>
             </div>
@@ -358,16 +402,16 @@
             <div class="accordion__content rte" id="accordion-collapser-3">
               <ul class="accordion-ul">
                 <li class="accordion-li">
-                  <a href="./policies/terms-of-service">Términos de Servicio</a>
+                  <a href="https://misionessabor.com/policies/terms-of-service">Términos de Servicio</a>
                 </li>
                 <li class="accordion-li">
-                  <a href="./policies/privacy-policy">Política de Privacidad</a>
+                  <a href="https://misionessabor.com/policies/privacy-policy">Política de Privacidad</a>
                 </li>
                 <li class="accordion-li">
-                  <a href="./policies/shipping-policy">Política de Envío</a>
+                  <a href="https://misionessabor.com/policies/shipping-policy">Política de Envío</a>
                 </li>
                 <li class="accordion-li">
-                  <a href="./policies/refund-policy">Política de Reembolso</a>
+                  <a href="https://misionessabor.com/policies/refund-policy">Política de Reembolso</a>
                 </li>
               </ul>
             </div>
@@ -575,9 +619,9 @@
       </div>
     </div>
   </footer>
-  <script src="./scripts/bootstrap.min.js"></script>
-  <script src="./res/node_modules/@glidejs/glide/dist/glide.min.js"></script>
-  <script src="./scripts/products.js"></script>
+  <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
+  <script src="https://misionessabor.com/res/node_modules/@glidejs/glide/dist/glide.min.js"></script>
+  <script src="https://misionessabor.com/scripts/products.js"></script>
 </body>
 
 </html>
