MS Update #2 (Shop & Product Pages)
Co-authored-by: Kevin Duncke <kevinduncke@gmail.com>
Co-authored-by: Roger Duncke <RogerDuncke@users.noreply.github.com>

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
   <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
   <link rel="stylesheet" href="https://misionessabor.com/styles/banner.css" type="text/css">
-  <link rel="stylesheet" href="https://misionessabor.com/styles/products.css" type="text/css">
+  <link rel="stylesheet" href="https://misionessabor.com/styles/featured-products.css" type="text/css">
   <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -108,7 +108,7 @@
               <a class="nav-link active" aria-current="page" href="https://misionessabor.com/index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://misionessabor.com/collections/all.html">Productos</a>
+              <a class="nav-link" href="https://misionessabor.com/pages/shop.html">Productos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://misionessabor.com/pages/about.html">Nosotros</a>
@@ -302,7 +302,7 @@
       <div class="column dropdown closed drop-nav">
         <h3>Navegación</h3>
         <ul>
-          <li><a href="https://misionessabor.com/collections/all.html">Hierbas</a></li>
+          <li><a href="https://misionessabor.com/pages/shop.html">Hierbas</a></li>
           <li><a href="https://misionessabor.com/pages/wholesale.html">Venta al por Mayor</a></li>
         </ul>
       </div>
